--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "framer-motion": "^12.9.2",
     "lucide-react": "^0.438.0",
     "next": "^14.2.23",
     "react": "^18.2.0",
@@ -50,8 +51,8 @@
     "next-router-mock": "^0.9.0",
     "next-sitemap": "^2.5.28",
     "postcss": "^8.5.1",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.5.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5"
   },
