--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1"
   },
